--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-#Ignore folder node_modules
-/node_modules
-
-#Ignore uneeded files
-/.editorconfig
-/.eslintignore
-/.eslintrc.json
-/package-lock.json
-/package.json
-.DS_Store
+**/node_modules/**
+*.sublime-project
+*.sublime-workspace
+*.cache
+**/.DS_Store
