--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
-    "@wordpress/base-styles": "^1.6.0",
+    "@wordpress/base-styles": "^1.7.0",
     "@wpzoom/helpers": "file:src/packages/helpers",
     "@wpzoom/utils": "file:src/packages/utils",
-    "babel-plugin-lodash": "^3.3.4"
+    "babel-plugin-lodash": "^3.3.4",
+    "hex-to-css-filter": "^2.0.4"
   },
   "includePaths": [
     "node_modules"
