--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "@wordpress/base-styles": "^1.7.0",
     "@wpzoom/helpers": "file:src/packages/helpers",
     "@wpzoom/utils": "file:src/packages/utils",
-    "babel-plugin-lodash": "^3.3.4",
-    "hex-to-css-filter": "^2.0.4"
+    "babel-plugin-lodash": "^3.3.4"
   },
   "includePaths": [
     "node_modules"
