Fixed issue with React version for Eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
     "settings": {
         "react": {
             "pragma": "wp",
-            "version": "detect"
+            "version": "latest"
         }
     },
     "rules": {
