Updated npm dependencies

--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "lint": "eslint --fix --ext .js,.jsx src"
   },
   "dependencies": {
-    "@babel/core": "^7.10.0",
-    "@wordpress/a11y": "^2.9.0",
-    "@wordpress/api-fetch": "^3.15.0",
-    "@wordpress/blob": "^2.8.0",
+    "@babel/core": "^7.12.10",
+    "@wordpress/a11y": "^2.14.0",
+    "@wordpress/api-fetch": "^3.21.1",
+    "@wordpress/blob": "^2.12.0",
     "@wordpress/icons": "^1.4.0",
-    "@wordpress/keycodes": "^2.12.0",
-    "@wordpress/rich-text": "^3.16.0",
-    "@wordpress/url": "^2.15.0",
-    "@wordpress/viewport": "^2.17.0",
-    "browserslist": "^4.12.0",
-    "cgb-scripts": "^1.23.0",
+    "@wordpress/keycodes": "^2.18.0",
+    "@wordpress/rich-text": "^3.24.1",
+    "@wordpress/url": "^2.21.0",
+    "@wordpress/viewport": "^2.25.1",
+    "browserslist": "^4.16.1",
+    "cgb-scripts": "^1.23.1",
     "classnames": "^2.2.6",
     "imagesloaded": "^4.1.4",
     "ingredients-parser": "^1.4.0",
@@ -36,9 +36,10 @@
     "react-player": "^1.15.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@wordpress/base-styles": "^1.8.0",
+    "@babel/cli": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@wordpress/base-styles": "^1.11.0",
+    "@wordpress/token-list": "^1.14.0",
     "@wpzoom/helpers": "file:src/packages/helpers",
     "@wpzoom/utils": "file:src/packages/utils",
     "babel-plugin-lodash": "^3.3.4"
