First attempt to migrate from CGB to @wordpress/scripts
Use Grunt and Webpack

--- a/package.json
+++ b/package.json
@@ -1,50 +1,94 @@
 {
-  "name": "recipe-card-blocks-by-wpzoom-cgb-guten-block",
+  "name": "recipe-card-blocks-by-wpzoom",
+  "title": "Recipe Card Blocks by WPZOOM",
   "version": "3.2.1",
-  "private": true,
   "description": "A set of Gutenberg Blocks (Recipe Card, details, ingredients, directions, nutrition ...) for recipe blogs.",
-  "author": "WPZOOM",
+  "tested_up_to": "5.6",
+  "textdomain": "wpzoom-recipe-card",
+  "author": "WPZOOM, Vicolas Petru",
+  "license": "GPL-2.0-or-later",
+  "private": true,
   "keywords": [
     "WordPress",
     "Gutenberg",
     "Block",
     "Recipe Card"
   ],
-  "scripts": {
-    "start": "cgb-scripts start",
-    "build": "cgb-scripts build",
-    "eject": "cgb-scripts eject",
-    "lint": "eslint --fix --ext .js,.jsx src"
+  "homepage": "https://www.wpzoom.com/plugins/recipe-card-blocks/",
+  "repository": "wpzoom/recipe-card-blocks-by-wpzoom-pro",
+  "bugs": {
+    "url": "https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro/issues"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@wordpress/a11y": "^2.14.0",
-    "@wordpress/api-fetch": "^3.21.1",
-    "@wordpress/blob": "^2.12.0",
-    "@wordpress/icons": "^1.4.0",
-    "@wordpress/keycodes": "^2.18.0",
-    "@wordpress/rich-text": "^3.24.1",
-    "@wordpress/url": "^2.21.0",
-    "@wordpress/viewport": "^2.25.1",
-    "browserslist": "^4.16.1",
-    "cgb-scripts": "^1.23.1",
-    "classnames": "^2.2.6",
-    "imagesloaded": "^4.1.4",
-    "ingredients-parser": "^1.4.0",
-    "react-html-parser": "^2.0.2",
-    "react-masonry-component": "^6.2.1",
-    "react-player": "^1.15.3"
+    "@fortawesome/fontawesome-free": "^5.15.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@wordpress/base-styles": "^1.11.0",
-    "@wordpress/token-list": "^1.14.0",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@godaddy-wordpress/stylelint-config": "^0.2.0",
+    "@wordpress/base-styles": "2.0.1",
+    "@wordpress/block-editor": "3.1.0",
+    "@wordpress/block-library": "2.8.0",
+    "@wordpress/blocks": "^6.10.0",
+    "@wordpress/edit-post": "3.7.0",
+    "@wordpress/i18n": "3.6.0",
+    "@wordpress/plugins": "2.6.0",
+    "@wordpress/postcss-themes": "^2.2.0",
+    "@wordpress/scripts": "^12.6.1",
     "@wpzoom/helpers": "file:src/packages/helpers",
     "@wpzoom/utils": "file:src/packages/utils",
-    "babel-plugin-lodash": "^3.3.4"
+    "astroturf": "^0.10.5",
+    "autoprefixer": "^9.7.5",
+    "css-loader": "^3.2.1",
+    "eslint": "^7.18.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "fitvids": "^2.1.1",
+    "grunt": "^1.3.0",
+    "grunt-bumpup": "^0.6.3",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-compress": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-shell": "^3.0.1",
+    "grunt-text-replace": "^0.4.0",
+    "grunt-wp-i18n": "^1.0.3",
+    "grunt-wp-readme-to-markdown": "^2.0.1",
+    "ingredients-parser": "^1.4.0",
+    "jquery": "^3.5.1",
+    "magnific-popup": "^1.1.0",
+    "matchdep": "^2.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.14.1",
+    "node-sass-glob-importer": "^5.3.2",
+    "postcss": "^8.2.4",
+    "postcss-color-function": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "react-html-parser": "^2.0.2",
+    "react-masonry-component": "^6.2.1",
+    "react-native": "^0.63.4",
+    "react-player": "^1.15.3",
+    "rtlcss-webpack-plugin": "^4.0.4",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^0.19.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-fix-style-only-entries": "^0.6.1",
+    "webpack-merge-and-include-globally": "^2.3.3"
   },
-  "includePaths": [
-    "node_modules"
-  ]
+  "scripts": {
+    "start": "wp-scripts start --config .dev/config/webpack.config.js --progress",
+    "build": "wp-scripts build --config .dev/config/webpack.config.js",
+    "version": "versionBump() { grunt version-bump --ver=\"$1\" && git add -A .; }; versionBump",
+    "postversion": "git push && git push --tags",
+    "makepot": "grunt update-pot",
+    "check-engines": "wp-scripts check-engines",
+    "check-licenses": "wp-scripts check-licenses",
+    "format:js": "wp-scripts format-js",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "lint:md:docs": "wp-scripts lint-md-docs",
+    "lint:md:js": "wp-scripts lint-md-js",
+    "lint:pkg-json": "wp-scripts lint-pkg-json",
+    "packages-update": "wp-scripts packages-update",
+    "test:e2e": "wp-scripts test-e2e",
+    "test:unit": "wp-scripts test-unit-js"
+  }
 }
