--- a/src/packages/utils/package.json
+++ b/src/packages/utils/package.json
@@ -2,23 +2,23 @@
   "name": "utils",
   "version": "1.0.0",
   "description": "A set of utils grouped into collections, like array, object or function",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro.git"
-  },
+  "author": "Vicolas Petru",
+  "license": "GPL-2.0-or-later",
   "keywords": [
     "wpzoom",
     "utils",
     "recipe card"
   ],
-  "author": "Vicolas Petru",
-  "license": "MIT",
+  "homepage": "https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro.git"
+  },
   "bugs": {
     "url": "https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro/issues"
   },
-  "homepage": "https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro#readme"
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
