Moved folder packages from 'src' to main plugin path

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@wordpress/plugins": "2.6.0",
     "@wordpress/postcss-themes": "^2.2.0",
     "@wordpress/scripts": "^12.6.1",
-    "@wpzoom/helpers": "file:src/packages/helpers",
-    "@wpzoom/utils": "file:src/packages/utils",
+    "@wpzoom/helpers": "file:packages/helpers",
+    "@wpzoom/utils": "file:packages/utils",
     "astroturf": "^0.10.5",
     "autoprefixer": "^9.7.5",
     "css-loader": "^3.2.1",
