--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,15 @@
-**/*.min.js
-**/*.build.js
-**/node_modules/**
-node_modules
+build
 dist
+node_modules
+vendor
+wordpress*
+**/test/*
+
+#  allow lint for tests
+*.spec.js.snap
+!**.spec.js
+!*.cypress.js
+
+# lint top level dot files
+!.*
+/node_modules/.*
