--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "url": "https://github.com/wpzoom/recipe-card-blocks-by-wpzoom-pro/issues"
   },
   "dependencies": {
-		"@fortawesome/fontawesome-free": "^5.15.2",
-		"magnific-popup": "^1.1.0"
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "magnific-popup": "^1.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.10.4",
@@ -56,6 +56,7 @@
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
+    "file-loader": "^6.2.0",
     "fitvids": "^2.1.1",
     "grunt": "^1.3.0",
     "grunt-bumpup": "^0.6.3",
@@ -85,6 +86,7 @@
     "rtlcss-webpack-plugin": "^4.0.4",
     "sass-loader": "^8.0.0",
     "thread-loader": "^3.0.1",
+    "url-loader": "^4.1.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^4.4.0",
     "webpack-fix-style-only-entries": "^0.6.1",
